# DSaaP-examples-FS26

./: README.md
10_virtual_environments/: Dockerfile  README.md  mamba_env.yml  pyproject.toml
10_virtual_environments/.devcontainer/: devcontainer.json
10_virtual_environments/src/: analysis.py
11_pipelining/: README.md  Snakefile  environment.yml  nextflow.config  pipeline.nf
11_pipelining/beast_template/: dna_template.xml  protein_template.xml
11_pipelining/data/: prot_example.fasta
11_pipelining/scripts/: beast_configuration.py
1_langages/go_assembler_example/: README.md  example.go  example_go_amd64.s
2_clean_code/: bad_naming.py  bad_naming_abstraction.py  comments_intent.py  comments_misleading.py  comments_old_code.py  comments_redundant.py  consistency_abstraction.py  consistency_formatting.py  consistency_loops.py  control_flow.py  control_flow_complex.py  formatting_bug_fix.py
5_testing/equivalence_classes/: README.md  discount_test.py
5_testing/unit_test_example/: README.md
5_testing/unit_test_example_1/: README.md  requirements.txt
5_testing/unit_test_example_full_coverage_mutant/: .coveragerc  README.md  requirements.txt
5_testing/unit_test_pitfalls/: README.md  assertion_too_strict_fixed.py  environment_dependency.py  environment_dependency_fix_with_mock.py  environment_dependency_fixed.py  implementation_details.py  implementation_details_fixed.py  multiple_values.py  multiple_values_fixed.py
5_testing/unit_testing_edge_cases/: README.md  (+1 more)
7_optimisation/: README.md  requirements.txt
projects/: example_README.md
(+25 files in other folders)
